Get replying basically working. Attachments to responses are being saved but are not showing up in the attachment list later, which is weird. Just now noticing that forum threads can be rendered under /info, in which case the Edit/Reply buttons do not get hijacked for the new editor because this JS isn't loaded in that page. Whether that's a feature or bug is TBD.
FossilOrigin-Name: 6269e5d70004f6f9b090757d41fd10973b1886631c2f577d4d2f3305cb6bc579

--- a/src/style.forum.css
+++ b/src/style.forum.css
@@ -11,6 +11,9 @@ fieldset.forum-status-selection {
   flex-direction: column;
   gap: 1em;
   padding: 0.5em;
+  /* Anyone know how to make these fade/slide in gracefully?
+  transition: display 0.5s ease-in-out;
+  transition: height 0.5s ease-in-out; */
 }
 
 .ForumPostEditor > .tab-bar{
